# rust-authentication-iam

./: .dockerignore  .env  .env.bk  .env.example  .gitignore  CI_CD_SETUP.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  SONARCLOUD_SETUP.md  TEST_DATABASE_SETUP.md  cobertura.xml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  sonar-project.properties  tasks.md
.scannerwork/: report-task.txt
.sqlx/: query-01bc49e2e536f98378f8cf29860658e46b1f9f69e314f9fcdc30ac0759aaf49e.json  query-0847344bc4425313ed9e7d2fd2c3cee3ebded6d70c38478ade2680fbb32e0975.json  query-15e5a57c09c05a4c6f05ad3105ae16111e258930ab34362662884206165b40de.json  query-22e0ac71b5279822fd5e9f1f3454c3245ee5e0f71914c84cd8fd9c01bcec2f80.json  query-237df47a5e101f3040c7d0bb682350d6d5f69644c6b786372b7ed845501f337f.json  query-2485dd2b8d03112de3e40ad8473fd3798cef5f56bc05c65b62f17765c8a3acc6.json  query-24ea33795a75c8cf5a55ee719369e1860de7e7e46cddfd4dcb02a4452c9856bf.json  query-3c72e021cd950d228105fee0f883c8347c44e87ac6f8a6a54062d2fdc74b38ad.json  query-3c9bf9e04671f7ef6ac996968cb5285d7d608181d0290a3fe26879c68660a77a.json  query-3f511149fd0f556219f263f8eaede882413ec46ff7d123738aa99f6d0006c12b.json  query-40617f6cd831ebe5b2ecd3aad30fb098ce031fce9e434e3962dd7184a23a785f.json  query-475389265454439cb69706ec115d22865f7c6ac33f9b2698eae2dcb967b594a8.json  query-5c95038c6e93f0528a028a1ec0464bedda9f854ca60f3434865ff9ba5fc1149e.json  query-5fc3632b15577393c1dfe1a0303e9d739cf0b4920e4622e70714f2d82a80e610.json  (+22 more)
coverage/: cobertura.xml
(+60 files in other folders)
