[package]
name = "authentication_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros"] }
async-trait = "0.1.88"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
thiserror = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-opentelemetry = "0.22"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = "5.4.0"
futures = "0.3.31"

[build-dependencies]
# (none)

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
